# webprog-todo-app

./: README.md
back-end/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  compose.yml
back-end/mysql/init/: schema.sql
back-end/src/: main.rs
back-end/src/model/: mod.rs  types.rs
back-end/src/model/tasks/: mod.rs
back-end/src/model/users/: mod.rs
back-end/src/router/account/: mod.rs
back-end/src/router/task/: mod.rs
back-end/src/utils/: mod.rs
front-end/: .eslintrc.json  .gitignore  package.json
front-end/apis/: index.ts
front-end/apis/available/: [username].ts
front-end/apis/login/: index.ts
front-end/apis/logout/: index.ts
front-end/apis/me/: index.ts
front-end/apis/parser/: index.ts  task.ts  user.ts
front-end/apis/signup/: index.ts
front-end/apis/tasks/: [id].ts  index.ts  me.ts
front-end/app/: page.tsx
front-end/pages/: _app.tsx  index.tsx
front-end/pages/account/: index.tsx
front-end/pages/login/: index.tsx
front-end/pages/logout/: index.ts
front-end/pages/me/: index.ts
front-end/pages/signup/: index.tsx
front-end/pages/tasks/: index.tsx
front-end/usecase/: tasks.ts  user.ts
front-end/utils/: typeUtils.ts
