[package]
name = "todo-app-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = "0.4"
dotenv = "0.15.0"
once_cell = "1"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
