[package]
name = "todo-app-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1"
chrono = "0.4"
dotenv = "0.15.0"
env_logger = "0.9"
once_cell = "1"
serde = "1"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
